--- a/real-estate-website/src/app/module-components/post/manage-post/post-detail/information/information.component.html
+++ b/real-estate-website/src/app/module-components/post/manage-post/post-detail/information/information.component.html
@@ -181,7 +181,7 @@
                                                     aria-hidden="true"></i> Số Tầng:</b> {{floor}}</label>
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-sm-12">
+                                <div class="col-md-12 col-sm-12" style="height: 300px;">
                                     <!-- First name -->
                                     <div class="md-form align-text-left" style="padding-bottom: 20px; height: 100px;">
                                         <label for="materialRegisterFormFirstName"><b><i class="fa fa-info-circle"
